--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	"type": "module",
 	"dependencies": {
 		"axios": "^1.3.4",
-		"bulma": "^0.9.4"
+		"bulma": "^0.9.4",
+		"sass": "^1.59.3"
 	}
 }
